tests/ui/expr/malformed_closure/block_instead_of_closure_in_arg.stderr
error[E0277]: expected a `FnOnce(&bool)` closure, found `bool`
  --> $DIR/block_instead_of_closure_in_arg.rs:3:23
   |
LL |        Some(true).filter({
   |  _________________------_^
   | |                 |
   | |                 required by a bound introduced by this call
LL | |/         if number % 2 == 0 {
LL | ||             number == 0
LL | ||         } else {
LL | ||             number != 0
LL | ||         }
   | ||_________- this tail expression is of type `bool`
LL | |      });
   | |______^ expected an `FnOnce(&bool)` closure, found `bool`
   |
   = help: the trait `for<'a> FnOnce(&'a bool)` is not implemented for `bool`
note: required by a bound in `Option::<T>::filter`
  --> $SRC_DIR/core/src/option.rs:LL:COL
help: you might have meant to create the closure instead of a block
   |
LL |     Some(true).filter(|_| {
   |                       +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
