tests/ui/expr/malformed_closure/block_instead_of_closure_in_arg.rs
fn main() {
    let number = 2;
    Some(true).filter({ //~ ERROR expected a `FnOnce(&bool)` closure, found `bool`
        if number % 2 == 0 {
            number == 0
        } else {
            number != 0
        }
    });
}
